--- a/vercel.json
+++ b/vercel.json
@@ -7,21 +7,20 @@
     },
     {
       "src": "frontend/package.json",
-      "use": "@vercel/node",
+      "use": "@vercel/static-build",
       "config": {
-        "installCommand": "npm install",
-        "buildCommand": "npm run build"
+        "distDir": "frontend/dist"
       }
     }
   ],
   "routes": [
     {
-      "src": "/(.*)",
+      "src": "/api/(.*)",
       "dest": "api/index.py"
     },
     {
       "src": "/(.*)",
-      "dest": "/"
+      "dest": "frontend/dist/$1"
     }
   ]
 }
